2012-10-09  Sudarsana Nagineni  <sudarsana.nagineni@intel.com>

        [EFL] Update EFL baselines after r130840
        https://bugs.webkit.org/show_bug.cgi?id=98846

        Unreviewed EFL gardening.

        Update baselines after the cairo update in r130840.

        * platform/efl/svg/W3C-SVG-1.1/animate-elem-08-t-expected.png:
        * platform/efl/svg/W3C-SVG-1.1/animate-elem-08-t-expected.txt:
        * platform/efl/svg/W3C-SVG-1.1/animate-elem-30-t-expected.png:
        * platform/efl/svg/W3C-SVG-1.1/animate-elem-30-t-expected.txt:
        * platform/efl/svg/W3C-SVG-1.1/animate-elem-83-t-expected.png:
        * platform/efl/svg/W3C-SVG-1.1/animate-elem-83-t-expected.txt:
        * platform/efl/svg/W3C-SVG-1.1/paths-data-01-t-expected.png:
        * platform/efl/svg/W3C-SVG-1.1/paths-data-01-t-expected.txt:
        * platform/efl/svg/W3C-SVG-1.1/paths-data-02-t-expected.png:
        * platform/efl/svg/W3C-SVG-1.1/paths-data-02-t-expected.txt:

2012-10-09  Tullio Lucena  <tullio.lucena@openbossa.org>

        [Qt] new test http/tests/cookies/single-quoted-value.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=86066

        Reviewed by Csaba Osztrogonác.

        Unskipping test.

        * platform/qt/TestExpectations:

2012-10-09  Sudarsana Nagineni  <sudarsana.nagineni@intel.com>

        [Cairo] Bump Cairo to fix more canvas/philip tests
        https://bugs.webkit.org/show_bug.cgi?id=97658

        Reviewed by Martin Robinson.

        Update platform-specific baselines after the cairo update. Also,
        unksip canvas/philip tests which are passing now.

        * platform/efl/TestExpectations:
        * platform/efl/fast/box-shadow/box-shadow-clipped-slices-expected.png:
        * platform/efl/fast/canvas/canvas-incremental-repaint-expected.png:
        * platform/efl/fast/dynamic/window-scrollbars-test-expected.png:
        * platform/efl/fast/images/pixel-crack-image-background-webkit-transform-scale-expected.png: